--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "tutorial",
+  "name": "react_to_do_list",
   "version": "0.1.0",
   "private": true,
+  "author": "Josh Potts",
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
